--- a/Physik/index.html
+++ b/Physik/index.html
@@ -16,32 +16,40 @@
     <div class="main-wrapper">
       <h1>Physik</h1>
 
-      <ol class="orederedListIndex">
-        <li>
-          <a href="kalirometrie.html" class="indexLink">Kalirometrie</a>
-        </li>
-        <li>
-          <a href="gasGesetze.html" class="indexLink">Gasgesetze</a>
-        </li>
+      <h2>Astrophysik</h2>
+      <ol>
+        <li><a href="gravitation.html" class="indexLink">Gravitation</a></li>
+      </ol>
+
+      <h2>Klassische Mechanik</h2>
+      <ol>
         <li>
           <a href="arbeitEnergieLeistung.html" class="indexLink"
             >Arbeit, Energie, Leistung</a
           >
         </li>
-        <li><a href="kinematik.html" class="indexLink">Kinematik</a></li>
+        <li><a href="impuls.html" class="indexLink">Impuls</a></li>
+        <li>
+          <a href="kinematik.html" class="indexLink">Kinematik</a>
+        </li>
+        <li>
+          <a href="kreisbewegungen.html" class="indexLink">Kreisbewegungen</a>
+        </li>
+        <li>
+          <a href="grundlagenMechanik.html" class="indexLink"
+            >Grundlagen Mechanik</a
+          >
+        </li>
         <li>
           <a href="formelsammlungWürfe.html" class="indexLink"
             >Formelsammlung Würfe</a
           >
         </li>
-        <li><a href="impuls.html" class="indexLink">Impuls</a></li>
-        <li>
-          <a href="gravitation.html" class="indexLink">Gravitation</a>
-        </li>
-        <li>
-          <a href="schwingungen.html" class="indexLink">Schwingungen</a>
-        </li>
+
         <li><a href="reibung.html" class="indexLink">Reibung</a></li>
+      </ol>
+      <h2>Optik</h2>
+      <ol>
         <li>
           <a href="strahlenoptik.html" class="indexLink">Strahlenoptik</a>
         </li>
@@ -51,9 +59,6 @@
           >
         </li>
         <li>
-          <a href="kreisbewegungen.html" class="indexLink">Kreisbewegungen</a>
-        </li>
-        <li>
           <a href="wellenoptik.html" class="indexLink">Wellenoptik</a>
         </li>
         <li>
@@ -61,11 +66,9 @@
             >Formelsammlung Wellenoptik</a
           >
         </li>
-        <li>
-          <a href="grundlagenMechanik.html" class="indexLink"
-            >Grundlagen Mechanik</a
-          >
-        </li>
+      </ol>
+      <h2>Relativitätstheorie</h2>
+      <ol>
         <li>
           <a href="relativitaetstheorie.html" class="indexLink"
             >Relativitäts&shy;theorie</a
@@ -77,6 +80,28 @@
           >
         </li>
       </ol>
+      <h2>Thermodynamik</h2>
+      <ol>
+        <li>
+          <a href="gasGesetze.html" class="indexLink">Gasgesetze</a>
+        </li>
+        <li>
+          <a href="kalirometrie.html" class="indexLink">Kalirometrie</a>
+        </li>
+      </ol>
+      <h2>Wellenlehre</h2>
+      <ol>
+        <li>
+          <a href="schwingungen.html" class="indexLink">Schwingungen</a>
+        </li>
+      </ol>
+
+      <h3>Bemierkung</h3>
+      <p>
+        Sortéiert no
+        <a href="https://de.wikipedia.org/wiki/Portal:Physik">dësem</a>
+        Artikel.
+      </p>
     </div>
   </body>
 </html>
