--- a/changeLog.html
+++ b/changeLog.html
@@ -121,6 +121,9 @@
                 Neit Kapitel an der Physik : Formelsammlung Relativitätstheorie
               </li>
               <li class="changeLogText">
+                Neit Kapitel an der Physik : Mechanische Wellen
+              </li>
+              <li class="changeLogText">
                 Neit Kapitel an der Elektrotechnik : Filterschaltungen
               </li>
               <li class="changeLogText">
@@ -152,6 +155,9 @@
               <li class="changeLogText">D'Print Ränner sinn elo méi enk.</li>
               <li class="changeLogText">
                 Neie Stil: Retrofromel, Damons Formula Tips
+              </li>
+              <li class="changeLogText">
+                D'Kapitel Indexen sinn elo no Deelberäich sortéiert.
               </li>
               <li class="changeLogText">Schreiffeeler goufe verbessert</li>
             </ul>
