--- a/Physik/index.html
+++ b/Physik/index.html
@@ -94,6 +94,11 @@
         <li>
           <a href="schwingungen.html" class="indexLink">Schwingungen</a>
         </li>
+        <li>
+          <a href="mechanischeWellen.html" class="indexLink"
+            >Mechanische Wellen</a
+          >
+        </li>
       </ol>
 
       <h3>Bemierkung</h3>
