--- a/changeLog.html
+++ b/changeLog.html
@@ -115,6 +115,16 @@
             <time>.2023</time>
             <ul>
               <li class="changeLogText">
+                Nei Kapitel an der Mathé : Intégration
+              </li>
+              <li class="changeLogText">Nei Exercicer: Logarithme Népérien</li>
+              <li class="changeLogText">Mathé ass elo opgedeelt</li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
+            <h3>Update 35</h3>
+            <time>.2023</time>
+            <ul>
+              <li class="changeLogText">
                 Neit Kapitel an der Physik : Formelsammlung Wellenoptik
               </li>
               <li class="changeLogText">
