--- a/Archiv/Chimie/html/alkane.html
+++ b/Archiv/Chimie/html/alkane.html
@@ -16,7 +16,7 @@
     <iframe
       title="Dokument"
       id="myPDF"
-      src="../pdf/test.pdf"
+      src="../pdf/Organische Chemie/alkane.pdf"
       frameborder="0"
     ></iframe>
   </body>
