--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -27,7 +27,10 @@
           <p><u>Organische Chemie</u></p>
           <ul>
             <li>
-              <a href="#">Alkane</a>
+              <a href="Chimie/html/alkane.html">Alkane</a>
+            </li>
+            <li>
+              <a href="Chimie/html/alkene.html">Alkene</a>
             </li>
           </ul>
         </li>
@@ -62,11 +65,13 @@
           <ul>
             <li>
               <a href="Mathe/html/logarithmeNeperien.html">
-                Logarithme Népérien</a
+                Logarithme Népérien 1</a
               >
             </li>
             <li>
-              <a href="Mathe/html/logarithmeNeperienLimites.html">Limites</a>
+              <a href="Mathe/html/logarithmeNeperien2.html">
+                Logarithme Népérien 2</a
+              >
             </li>
           </ul>
         </li>
