--- a/Chemie/alkane.html
+++ b/Chemie/alkane.html
@@ -21,18 +21,13 @@
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
 
-    <title>Organische Chemie</title>
+    <title>Alkane</title>
   </head>
   <body>
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <p id="printWatermark"></p>
-      <h1>Organische Chemie</h1>
-      <h2>Organische Chemie</h2>
-      <p>
-        Die organische Chemie ist die Chemie der Kohlenstoffverbindungen.
-        Organische Moleküle basieren auf einem Kohlenstoffgerüst.
-      </p>
+      <h1>Alkane</h1>
       <h2>Kohlenwasserstoffe</h2>
       <p>
         Kohlenwasserstoffe sind Verbindungen, deren Moleküle nur aus
