--- a/Chemie/index.html
+++ b/Chemie/index.html
@@ -20,10 +20,8 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Chemie</h1>
-      <ol class="orederedListIndex">
-        <li>
-          <a href="redoxreaktionen.html" class="indexLink">Redoxreaktionen</a>
-        </li>
+      <h2>Allgemeine Chemie</h2>
+      <ol>
         <li>
           <a href="gehaltsangaben.html" class="indexLink">Gehaltsangaben</a>
         </li>
@@ -33,19 +31,38 @@
           >
         </li>
         <li>
+          <a href="saeureUndBasen.html" class="indexLink">Säure und Basen</a>
+        </li>
+      </ol>
+      <h2>Anorganische Chemie</h2>
+      <ol>
+        <li>
           <a href="chemischesGleichgewicht.html" class="indexLink"
             >Chemisches Gleichgewicht</a
           >
+          <li>
+          <a href="redoxreaktionen.html" class="indexLink">Redoxreaktionen</a>
         </li>
-        <li>
-          <a href="saeureUndBasen.html" class="indexLink">Säure und Basen</a>
-        </li>
-        <li>
-          <a href="organischeChemie.html" class="indexLink"
-            >Organische Chemie</a
-          >
         </li>
       </ol>
+      <h2>Organische Chemie</h2>
+      <ol>
+        <li>
+          <a href="alkane.html" class="indexLink">Alkane</a>
+        </li>
+        <li>
+          <a href="alkene.html" class="indexLink">Alkene</a>
+        </li>
+      </ol>
+
+      <h3>Bemierkung</h3>
+      <p>
+        Sortéiert no
+        <a href="https://de.wikipedia.org/wiki/Chemie#Allgemeine_Chemie">
+          dësem</a
+        >
+        Artikel.
+      </p>
     </div>
   </body>
 </html>
