--- a/changeLog.html
+++ b/changeLog.html
@@ -117,7 +117,9 @@
               <li class="changeLogText">
                 Nei Kapitel an der Mathé : Intégration
               </li>
-              <li class="changeLogText">Nei Exercicer: Logarithme Népérien</li>
+              <li class="changeLogText">
+                Nei Exercicer: Logarithme Népérien, Festigkeitslehre, Alkene
+              </li>
               <li class="changeLogText">Mathé ass elo opgedeelt</li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
