--- a/Mathe/index.html
+++ b/Mathe/index.html
@@ -15,6 +15,7 @@
     <my-navigator></my-navigator>
     <div class="main-wrapper">
       <h1>Mathématiques</h1>
+      <h2></h2>
       <ol class="orederedListIndex">
         <li><a href="limites.html" class="indexLink">Limites</a></li>
         <li>
@@ -110,7 +111,18 @@
             Trigonomètrie dans un triangle rectangle
           </a>
         </li>
+        <li>
+          <a href="integration.html" class="indexLink"> Intégration </a>
+        </li>
       </ol>
+      <!-- <h3>Bemierkung</h3>
+      <p>
+        Sortéiert no
+        <a href="https://de.wikipedia.org/wiki/Teilgebiete_der_Mathematik"
+          >dësem</a
+        >
+        Artikel.
+      </p> -->
     </div>
   </body>
 </html>
