--- a/Archiv/Mathe/html/logarithmeNeperien.html
+++ b/Archiv/Mathe/html/logarithmeNeperien.html
@@ -16,7 +16,7 @@
     <iframe
       title="Dokument"
       id="myPDF"
-      src="../pdf/Logarithme Neperien/Logarithme Népérien.pdf"
+      src="../pdf/Logarithme Neperien/Logarithme Neperien 1.pdf"
       frameborder="0"
     ></iframe>
   </body>
