--- a/Archiv/Mathe/html/logarithmeNeperien2.html
+++ b/Archiv/Mathe/html/logarithmeNeperien2.html
@@ -13,6 +13,11 @@
     </style>
   </head>
   <body>
-    <iframe title="Dokument" id="myPDF" src="../pdf/" frameborder="0"></iframe>
+    <iframe
+      title="Dokument"
+      id="myPDF"
+      src="../pdf/Logarithme Neperien/Logarithme Neperien 2.pdf"
+      frameborder="0"
+    ></iframe>
   </body>
 </html>
