--- a/Archiv/Physik/html/duenneSchichten.html
+++ b/Archiv/Physik/html/duenneSchichten.html
@@ -16,7 +16,7 @@
     <iframe
       title="Dokument"
       id="myPDF"
-      src="../pdf/Wellenoptik/Dünne Schichten.pdf"
+      src="../pdf/Wellenoptik/Duenne Schichten.pdf"
       frameborder="0"
     ></iframe>
   </body>
