--- a/Archiv/Mechanik/html/festigkeitslehre.html
+++ b/Archiv/Mechanik/html/festigkeitslehre.html
@@ -18,7 +18,7 @@
     <iframe
       title="Dokument"
       id="myPDF"
-      src="../pdf/Festiglkeitslehre/"
+      src="../pdf/Festigkeitslehre/Festigkeitslehre.pdf"
       frameborder="0"
     ></iframe>
   </body>
