--- a/Archiv/Physik/html/realtivitaet.html
+++ b/Archiv/Physik/html/realtivitaet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chimie</title>
+    <title>Exercicen</title>
     <style>
       #myPDF {
         width: 100%;
@@ -16,7 +16,7 @@
     <iframe
       title="Dokument"
       id="myPDF"
-      src="../pdf/Organische Chemie/Alkene.pdf"
+      src="../pdf/Relativitaet/Relativitaet.pdf"
       frameborder="0"
     ></iframe>
   </body>
