--- a/changeLog.html
+++ b/changeLog.html
@@ -112,7 +112,7 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 35</h3>
-            <time>.2023</time>
+            <time>5.3.2023</time>
             <ul>
               <li class="changeLogText">
                 Nei Kapitel an der Mathé : Intégration
