--- a/Divers/naturkonstanten.html
+++ b/Divers/naturkonstanten.html
@@ -11,6 +11,8 @@
       async
       src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
     ></script>
+    <script src="../assets/mathJax.js"></script>
+
     <script defer src="../feedbackPopup.js"></script>
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
@@ -31,44 +33,66 @@
             <th>Wert</th>
           </tr>
           <tr>
-            <td>$$Avogadro-Konstante$$</td>
-            <td>$$N_{A}$$</td>
-            <td>$$6,022\ 140\ 76\cdot 10^{23}\frac{1}{mol} $$</td>
+            <td><p>Avogadro-Konstante</p></td>
+            <td><p>$N_{A}$</p></td>
+            <td><p>$6,022\ 140\ 76\cdot 10^{23}\frac{1}{mol} $</p></td>
           </tr>
           <tr>
-            <td>$$Dielektrizitätskonstante$$</td>
-            <td>$$\epsilon_{0} $$</td>
-            <td>$$8,854\ 187\ 812\ 813\ \cdot 10^{-12}\frac{As}{Vm} $$</td>
+            <td><p>Dielektrizitätskonstante</p></td>
+            <td><p>$\epsilon_{0} $</p></td>
+            <td><p>$8,854\ 187\ 812\ 813\ \cdot 10^{-12}\frac{As}{Vm} $</p></td>
           </tr>
           <tr>
-            <td>$$Elementarladung$$</td>
-            <td>$$e$$</td>
-            <td>$$1,602\ 176\ 634\cdot 10^{-19}C$$</td>
+            <td><p>Elementarladung</p></td>
+            <td><p>$e$</p></td>
+            <td><p>$1,602\ 176\ 634\cdot 10^{-19}C$</p></td>
           </tr>
           <tr>
-            <td>$$Gaskonstante$$</td>
-            <td>$$R$$</td>
-            <td>$$8,314\ 462\ 618\ 153\ 24\frac{J}{Kmol} $$</td>
+            <td><p>Gaskonstante</p></td>
+            <td><p>$R$</p></td>
+            <td><p>$8,314\ 462\ 618\ 153\ 24\frac{J}{Kmol} $</p></td>
           </tr>
           <tr>
-            <td>$$Gravitationskonstante$$</td>
-            <td>$$G$$</td>
-            <td>$$6,674\ 301\ 5\cdot 10^{-11}\frac{m^{3}}{kg\cdot s^{2}} $$</td>
+            <td><p>Gravitationskonstante</p></td>
+            <td><p>$G$</p></td>
+            <td>
+              <p>$6,674\ 301\ 5\cdot 10^{-11}\frac{m^{3}}{kg\cdot s^{2}} $</p>
+            </td>
           </tr>
           <tr>
-            <td>$$Lichtgeschwindigkeit$$</td>
-            <td>$$c$$</td>
-            <td>$$299\ 792\ 458\frac{m}{s} $$</td>
+            <td><p>Lichtgeschwindigkeit</p></td>
+            <td><p>$c$</p></td>
+            <td><p>$299\ 792\ 458\frac{m}{s} $</p></td>
           </tr>
           <tr>
-            <td>$$magnetische\ Feldkonstante$$</td>
-            <td>$$ \mu_0 $$</td>
-            <td>$$ 4 \pi \cdot 10^{-7} \frac{Vs}{Am} $$</td>
+            <td><p>magnetische Feldkonstante</p></td>
+            <td><p>$ \mu_0 $</p></td>
+            <td><p>$ 4 \pi \cdot 10^{-7} \frac{Vs}{Am} $</p></td>
           </tr>
           <tr>
-            <td>$$Planck Konstante$$</td>
-            <td>$$h$$</td>
-            <td>$$6,626\ 070\ 15\cdot 10^{-34}J\cdot s$$</td>
+            <td><p>Planck Konstante</p></td>
+            <td><p>$h$</p></td>
+            <td><p>$6,626\ 070\ 15\cdot 10^{-34}J\cdot s$</p></td>
+          </tr>
+          <tr>
+            <td><p>Ruhemasse des Elektrons</p></td>
+            <td>$$m_e$$</td>
+            <td><p>$9,109 \cdot 10^{-31} kg$</p></td>
+          </tr>
+          <tr>
+            <td><p>Ruhemasse des Protons</p></td>
+            <td>$$m_p$$</td>
+            <td><p>$1,673 \cdot 10^{-27} kg$</p></td>
+          </tr>
+          <tr>
+            <td><p>Ruhemasse des Neutrons</p></td>
+            <td>$$m_n$$</td>
+            <td><p>$1,675 \cdot 10^{-27} kg$</p></td>
+          </tr>
+          <tr>
+            <td><p>Ruhemasse des Alphateilchens</p></td>
+            <td>$$m_e$$</td>
+            <td><p>$6,645 \cdot 10^{-27} kg$</p></td>
           </tr>
         </table>
       </div>
