--- a/changeLog.html
+++ b/changeLog.html
@@ -120,11 +120,14 @@
               <li class="changeLogText">
                 Nei Exercicer: Logarithme Népérien, Festigkeitslehre, Alkene
               </li>
-              <li class="changeLogText">Mathé ass elo opgedeelt</li>
+              <li class="changeLogText">
+                Ergänzungen am Kapitel : Naturkonstanten
+              </li>
+              <li class="changeLogText">Chemie ass elo opgedeelt</li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 35</h3>
-            <time>.2023</time>
+            <time>27.2.2023</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik : Formelsammlung Wellenoptik
