--- a/Divers/naturkonstanten.html
+++ b/Divers/naturkonstanten.html
@@ -77,22 +77,22 @@
           <tr>
             <td><p>Ruhemasse des Elektrons</p></td>
             <td>$$m_e$$</td>
-            <td><p>$9,109 \cdot 10^{-31} kg$</p></td>
+            <td><p>$9,109\ 383\ 701\ 5 \cdot 10^{-31} kg$</p></td>
           </tr>
           <tr>
             <td><p>Ruhemasse des Protons</p></td>
             <td>$$m_p$$</td>
-            <td><p>$1,673 \cdot 10^{-27} kg$</p></td>
+            <td><p>$1,672\ 621\ 923\ 69 \cdot 10^{-27} kg$</p></td>
           </tr>
           <tr>
             <td><p>Ruhemasse des Neutrons</p></td>
             <td>$$m_n$$</td>
-            <td><p>$1,675 \cdot 10^{-27} kg$</p></td>
+            <td><p>$1,674\ 927\ 498\ 04 \cdot 10^{-27} kg$</p></td>
           </tr>
           <tr>
             <td><p>Ruhemasse des Alphateilchens</p></td>
             <td>$$m_e$$</td>
-            <td><p>$6,645 \cdot 10^{-27} kg$</p></td>
+            <td><p>$6,644\ 657\ 335\ 7 \cdot 10^{-27} kg$</p></td>
           </tr>
         </table>
       </div>
