--- a/Physik/index.html
+++ b/Physik/index.html
@@ -21,6 +21,13 @@
         <li><a href="gravitation.html" class="indexLink">Gravitation</a></li>
       </ol>
 
+      <h2>Kernphysik</h2>
+      <ol>
+        <li>
+          <a href="radioaktivitaet.html" class="indexLink">Radioaktivität</a>
+        </li>
+      </ol>
+
       <h2>Klassische Mechanik</h2>
       <ol>
         <li>
