--- a/changeLog.html
+++ b/changeLog.html
@@ -112,6 +112,13 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 35</h3>
+            <time>.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik : Radioaktivität
+              </li>
+            </ul>
+            <h3>Update 35</h3>
             <time>5.3.2023</time>
             <ul>
               <li class="changeLogText">
