--- a/Physik/radioaktivitaet.html
+++ b/Physik/radioaktivitaet.html
@@ -23,7 +23,233 @@
     <div class="main-wrapper">
       <p id="printWatermark"></p>
       <h1>Radioaktivität</h1>
-      <h2>h2Header</h2>
+      <h2>Physikalische Grö&beta;en</h2>
+      <ul>
+        <li>
+          <p>$Z$: Kernladungszahl äquivalent zur Ordnungszahl</p>
+        </li>
+        <li>
+          <p>$N$: Antzahl aus Neutronen</p>
+        </li>
+        <li>
+          <p>$A$: Massenzahl</p>
+        </li>
+        <li>
+          <p>$e$: Elementarladung</p>
+        </li>
+      </ul>
+      <h3>Bermerkung</h3>
+      <p>Siehe <a href="../Divers/naturkonstanten.html">Naturkonstanten</a>.</p>
+      <h2>Grundlagen</h2>
+      <p>
+        Der Atomkern besteht aus Neutronen $n^0$ und Protonen $p^+$, diese
+        werden Nukleonen genannt und sind sogenannte Kernbausteine eines
+        Atomkerns. Der Atomkern ist also positiv.
+      </p>
+      <p>Es gilt:</p>
+      $$A = Z + N $$
+      <h2>Tröpfchenmodell</h2>
+      <p>
+        Das Tröpfchenmodell wurde in 1937 von <i>Gavmov</i> entwickelt und
+        betrachtet den Atomkern als Ganzes. <br />Die Atomkerne werden als
+        kleine Tropfen einer aus Protonen und Neutronen bestehenden
+        <q>Kernflüssigkeit</q> angesehen. Wie in einem Wassertropfen werden die
+        einzelnen Moleküle durch Kohäsionskräfte zusammengehalten und verbinden
+        so Kernkräfte und Nukleonen.
+      </p>
+      <h2>Nuklid</h2>
+      <p>
+        Ein Nuklid wird beschrieben durch ein chemisches Elementsymbol $K$, eine
+        Massenzahl $A$ und eine Kernladungszahl $Z$.
+      </p>
+      $$ \ce{^A_Z K} $$
+      <h2>Isotope</h2>
+      <p>
+        Isotope sind Atomkerne mit gleicher Protonenzahl aber verschiedener
+        Neutronenzahl.
+      </p>
+      <h3>Bemerkung</h3>
+      <p>
+        Isotope verhalten sich chemisch gesehen gleich, wie ein Atomkern
+        gleicher Neutronenzahl und Protonenzahl da, chemisch gesehen nur die
+        Elektronenzahl relevant.
+      </p>
+      <h2>Atomare Masseneinheit</h2>
+      <p>
+        Die atomare Masseneinheit $u$ ist $\frac{1}{12}$ der Atommasse $m_A$ des
+        Kohlenstoffisotops $\ce{^12_6C}$. <br />
+        $1u = 1,660\ 5 \cdot 10^{-27}kg$
+      </p>
+      <h3>Bermerkung</h3>
+      <p>
+        Siehe
+        <a href="../Divers/exotischeUmwandlungen.html">Exotische Umwandlungen</a
+        >.
+      </p>
+      <h2>Absolute Atommasse</h2>
+      <p>Formel:</p>
+      $$ m_A = A_r \cdot 1u$$
+      <h2>Radioaktivität</h2>
+      <p>
+        Radioaktivität ist die Eigenschaft von Atomkernen sich selbst
+        umzuwandeln und dabei eine charakteristische Strahlung auszusenden.
+      </p>
+      <h2>Natürliche und Unnatürliche Strahlung</h2>
+      <p>
+        Je nachdem, ob das zerfallende Nuklid natürlich vorkommt oder künstlich
+        erzeugt wurde, spricht man von natürlicher oder künstlicher
+        Radioaktivität.
+      </p>
+      <h2>Strahlungsarten</h2>
+      <ul>
+        <li>
+          <p><u>Alphastrahlung</u>:</p>
+
+          <p>
+            Beim $\alpha$ Zerfall zerfällt der Atomkern in ein neues Element und
+            strahlt dabei ein $\alpha$ - Teilchen aus also ein $\ce{He}$-Kern.
+          </p>
+          <p><u>Zerfallsgleichung:</u></p>
+
+          <p>$\ce{^A_Z K_1 -> ^{A-4}_{Z-2}K_2 + ^4_2 \alpha}$</p>
+        </li>
+        <li>
+          <p><u>$\beta^-$-Strahlung</u>:</p>
+
+          <p>
+            Beim $\beta^-$ Zerfall zerfällt der Atomkern in ein neues Element
+            und strahlt dabei ein Elektron $e^-$ ab. Dabei zerfällt im Atomkern
+            ein Neutron zu einem Elektron und einem Proton:
+          </p>
+          $$ \ce{n^0 -> e- + p+} $$
+          <p>
+            Dieser Prozess den Energieerhaltungssatz nicht befolgt, wurde das
+            Antineutrino $\bar{\nu}$ postuliert. Dieses Teilchen besteht aus
+            Antimaterie, besitzt keine elektrische Ladung und stellt eine
+            Portion Energie dar.
+          </p>
+          <p><u>Zerfallsgleichung:</u></p>
+
+          <p>$\ce{^A_Z K_1 -> ^A_{Z+1}K_2 + ^0_{-1} \beta + ^0_0 \bar{\nu}}$</p>
+        </li>
+        <li>
+          <p><u>$\beta^+$-Strahlung</u>:</p>
+
+          <p>
+            Beim $\beta^+$ Zerfall zerfällt der Atomkern in ein neues Element
+            und strahlt dabei ein Positron $\bar{e}^+$ ab. Dabei zerfällt im
+            Atomkern ein Proton zu einem Positron und einem Neutron:
+          </p>
+          $$ \ce{p+ -> \bar{e}^+ + n^0} $$
+          <p>
+            Dieser Prozess den Energieerhaltungssatz nicht befolgt, wurde das
+            Neutrino $\nu$ postuliert. Dieses Teilchen besteht aus gewöhnlicher
+            Materie, besitzt keine elektrische Ladung und stellt eine Portion
+            Energie dar.
+          </p>
+          <p><u>Zerfallsgleichung:</u></p>
+
+          <p>$\ce{^A_Z K_1 -> ^A_{Z-1}K_2 + ^0_{+1} \beta + ^0_0 \nu}$</p>
+        </li>
+        <li>
+          <p><u>Gammastrahlung</u></p>
+          <p>
+            Die Gammastrahlung ist eine kurzwellige elektromagnetische Welle
+            welche von dem Atomkern ausgesendet wird wenn dieser sich von einem
+            energetisch angeregten Zustand zu einem energetisch niedrigen
+            Zustand oder manchmal dem Grundzustand verändert.
+          </p>
+          <p><u>Zerfallsgleichung:</u></p>
+          $$ \ce{^A_Z K^* -> ^A_Z K^* + \gamma} $$
+        </li>
+      </ul>
+      <h2>Nomenklatur der Antimaterie</h2>
+      <p>Antimaterie wird mit einem oberen Strich gekennzeichnet.</p>
+      <h2>Aktivität</h2>
+      <p>
+        Die Aktivität $A$ gibt die Zerfallsrate der Radioaktiven Atomkerne an.
+      </p>
+      <h3>Formel</h3>
+      $$ A = - \frac{\Delta N}{\Delta t} $$
+      <h3>Einheit</h3>
+      $$ [A] = 1 Bq $$ $$ [A] = 1 s^{-1} $$ $$Bq,\ Becquerel $$
+      <p>Die Aktivität lässt sich auch anders definieren. Da:</p>
+      $$A \sim N $$
+      <p>und</p>
+      $$A \sim \lambda $$
+      <p>erhalten wir:</p>
+      $$ A = \lambda \cdot N $$
+      <h3>Erklärungen</h3>
+      $$ \lambda,\ Zerfallskonstante$$
+      <p>
+        Die Zerfallskonstante $\lambda$ ist für jedes Element und Isotop anders.
+      </p>
+      <h3>Bemerkung</h3>
+      <p>Siehe <a href="../Divers/">Zerfallskonstantentabelle</a></p>
+      <h2>Grundgesetz des radioaktiven Zerfalls</h2>
+      <h3>Herleitung</h3>
+
+      <p>
+        Um ein Gesetz für den radioaktiven Zerfall zu finden Kombinieren wir
+        folgende Formeln der Aktivität $A$
+      </p>
+      $$ A = - \frac{\Delta N}{\Delta t} (1)$$ $$ A = \lambda \cdot N (2)$$
+      <p>Es gilt:</p>
+      $$ (1) = (2)$$ $$\Leftrightarrow - \frac{\Delta N}{\Delta t} = \lambda
+      \cdot N$$ $$\Leftrightarrow \frac{\Delta N}{\Delta t} = - \lambda \cdot
+      N$$
+      <p>Mit</p>
+      $$ \lim_{\Delta t \rightarrow 0} \frac{\Delta N}{\Delta t} =
+      \frac{dN}{dt}$$
+      <p>Wir erhalten also</p>
+      $$ \frac{dN}{dt} = - \lambda \cdot N$$ $$\Leftrightarrow \frac{dN}{N} = -
+      \lambda \cdot dt$$ $$\Leftrightarrow \int_{N_0}^N \frac{dN}{N} = - \lambda
+      \int_0^t dt$$ $$\Leftrightarrow \ln \left( \frac{dN}{N} \right) = -
+      \lambda \cdot t$$ $$\Leftrightarrow N = N_0 \cdot e^{-\lambda t}$$
+      $$\Leftrightarrow N(t) = N_0 \cdot e^{-\lambda t}$$
+      <h3>Formel</h3>
+      $$N(t) = N_0 \cdot e^{-\lambda t}$$
+      <h2>Anzahl der Atome</h2>
+      <h3>Formel</h3>
+      $$ N_{Atome} = \frac{m}{m_A} $$ $$N_{Atome},\ Atomanzahl$$ $$m,\ Masse\
+      des\ Körpers$$ $$m_A,\ Masse\ eines\ Atoms$$
+      <h2>Radioaktiver Zerfall: Masse</h2>
+      <h3>Herleitung</h3>
+      $$ N(t) = N_0 \cdot e^{-\lambda t} $$ $$\Leftrightarrow N(t) \cdot m_A =
+      N_0 \cdot m_A \cdot e^{-\lambda t} $$ $$\Leftrightarrow m(t) = m_0 \cdot
+      e^{-\lambda t} $$
+      <h3>Formel</h3>
+      $$m(t) = m_0 \cdot e^{-\lambda t}$$
+      <h2>Radioaktiver Zerfall: Aktivität</h2>
+      <h3>Herleitung</h3>
+      $$ N(t) = N_0 \cdot e^{-\lambda t} $$ $$\Leftrightarrow N(t) \cdot \lambda
+      = N_0 \cdot \lambda \cdot e^{-\lambda t} $$ $$\Leftrightarrow A(t) = A_0
+      \cdot e^{-\lambda t} $$
+      <h2>Halbwertszeit</h2>
+      <p>
+        Die Halbwertszeit $T_{\frac{1}{2}}$ gibt die Zeit ein die ein
+        radioaktives Präparat benötigt um zur Hälfte zerfallen zu sein.
+      </p>
+      <h3>Herleitung 1</h3>
+      <p>Nach der Definition der Halbwertszeit gilt:</p>
+      $$ \frac{1}{2} \cdot N_0 = N_0 \cdot e^{-\lambda T_{\frac{1}{2}}} $$
+      $$\Leftrightarrow \frac{1}{2} = e^{-\lambda T_{\frac{1}{2}}} $$
+      $$\Leftrightarrow \ln \left( \frac{1}{2} \right) = -\lambda
+      T_{\frac{1}{2}} $$ $$\Leftrightarrow T_{\frac{1}{2}} =
+      \frac{\ln(2)}{\lambda} $$
+      <h3>Formel</h3>
+      $$T_{\frac{1}{2}} = \frac{\ln(2)}{\lambda} $$
+      <h3>Herleitung 2</h3>
+      <p>Mit der Formel der Aktivität gilt</p>
+      $$ A = \lambda \cdot N(t) $$ $$\Leftrightarrow \lambda = \frac{A}{N(t)}
+      (1)$$
+      <p>und</p>
+      $$ T_{\frac{1}{2}} = \frac{\ln(2)}{\lambda} $$ $$\Leftrightarrow \lambda =
+      \frac{\ln(2)}{T_{\frac{1}{2}}} (2)$$
+      <p>Es gilt:</p>
+      $$ (1) = (2) $$ $$\Leftrightarrow \frac{A}{N(t)} =
+      \frac{\ln(2)}{T_{\frac{1}{2}}}$$ $$\Leftrightarrow A =
+      \frac{N(t)}{T_{\frac{1}{2}}} \cdot \ln(2)$$
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
