--- a/changeLog.html
+++ b/changeLog.html
@@ -111,14 +111,16 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
-            <h3>Update 35</h3>
+            <h3>Update 37</h3>
             <time>.2023</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik : Radioaktivität
               </li>
+              <li class="changeLogText">Neit Kapitel an der Chemie : Alkene</li>
+              <li class="changeLogText">Nei Spréch!</li>
             </ul>
-            <h3>Update 35</h3>
+            <h3>Update 36</h3>
             <time>5.3.2023</time>
             <ul>
               <li class="changeLogText">
